WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
Bug 32708
SVG filter on filter don't work
https://bugs.webkit.org/show_bug.cgi?id=32708
Summary
SVG filter on filter don't work
Dirk Schulze
Reported
2009-12-18 03:56:17 PST
Created
attachment 45141
[details]
SVG Filter on Filter If a parent object and it's child object use the same filter with the same filter id, none of the effects is drawn. This is caused by
http://trac.webkit.org/browser/trunk/WebCore/rendering/SVGRenderSupport.cpp#L118
. The intention was to avoid two filter drawings on this combination: <text filter="url(#foo)">Test<tspan filter="url(#foo)">123</tspan></text> Is this a regression, caused by the code clean-up on SVGRenderBase::prepareToRenderSVGContent()?
Attachments
SVG Filter on Filter
(361 bytes, image/svg+xml)
2009-12-18 03:56 PST
,
Dirk Schulze
no flags
Details
Patch
(33.83 KB, patch)
2010-06-03 12:58 PDT
,
Dirk Schulze
zimmermann
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dirk Schulze
Comment 1
2010-01-04 15:57:47 PST
I don't see a reason, why a tspan element shouldn't be rendered with a filter, if the text is rendered with the same filter? I couldn't find anythink about this strange behavior in the spec. Why should it only be possible that both, tspan and text, use filters, if the filters differ? Only batik and WebKit are doing this. I would like to delete this constraints if there is no plaussible reason to do that.
Nikolas Zimmermann
Comment 2
2010-01-04 17:38:04 PST
Hm interessting, I can't remember for which testcase this "hack" has been added, can you just try to delete the checks, and see what breaks?
Dirk Schulze
Comment 3
2010-01-15 14:28:57 PST
I run all svg tests and none of them break after deleting this check. There is still no reason for me to use this constraint beside to be compatible with batik. FF and Opera allow filters on text and tspan and also use them seperatly. I'll write a patch with a simple test to get rid of this limitation.
Dirk Schulze
Comment 4
2010-06-03 12:58:22 PDT
Created
attachment 57807
[details]
Patch
Eric Seidel (no email)
Comment 5
2010-06-03 13:25:42 PDT
Attachment 57807
[details]
did not build on mac: Build output:
http://webkit-commit-queue.appspot.com/results/3013040
Dirk Schulze
Comment 6
2010-06-04 00:51:04 PDT
(In reply to
comment #5
)
>
Attachment 57807
[details]
did not build on mac: > Build output:
http://webkit-commit-queue.appspot.com/results/3013040
Sorry buildbot, but it doesn't look like it was my fault.
Nikolas Zimmermann
Comment 7
2010-06-04 02:43:19 PDT
Comment on
attachment 57807
[details]
Patch r=me, mac ews has a problem unrelated to your patch "distccd[37387] (dcc_writex) ERROR: failed to write: No space left on device". Please change the text to "This is for filter on filter", instead of "This is a for filter on filter" before landing :-)
Eric Seidel (no email)
Comment 8
2010-06-04 10:34:04 PDT
(In reply to
comment #7
)
> (From update of
attachment 57807
[details]
) > r=me, mac ews has a problem unrelated to your patch "distccd[37387] (dcc_writex) ERROR: failed to write: No space left on device". > Please change the text to "This is for filter on filter", instead of "This is a for filter on filter" before landing :-)
? Really? the mac-ews bot is only using 13% of its disk. Maybe one of the other machines in teh cluster is out of space?
Eric Seidel (no email)
Comment 9
2010-06-04 10:35:20 PDT
Thanks. I've notified the admin of that machine and it shoudl be fixed soon.
Dirk Schulze
Comment 10
2010-06-04 11:02:38 PDT
Committed
r60689
: <
http://trac.webkit.org/changeset/60689
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug