2010-06-04  Dirk Schulze  <krit@webkit.org>

Reviewed by Nikolas Zimmermann.

        SVG filter on filter don't work
        https://bugs.webkit.org/show_bug.cgi?id=32708

        Any child of <text> was not allowed to use the same filter as the text root.
        I couldn't found any reason in the SVG specification that legimitate this.
        Only batik also doesn't allow the same filter on the text root as on it's childs,
        while any other effect is still allowed.
        I removed this limitation so that the result looks like the result on Firefox.

        Test: svg/filters/filter-on-filter-for-text.svg

        * rendering/SVGRenderSupport.cpp:
        (WebCore::SVGRenderBase::prepareToRenderSVGContent):
        * rendering/SVGRenderSupport.h:
        * rendering/SVGRootInlineBox.cpp:
        (WebCore::SVGRootInlineBoxPaintWalker::SVGRootInlineBoxPaintWalker):
        (WebCore::SVGRootInlineBoxPaintWalker::chunkStartCallback):
        (WebCore::SVGRootInlineBox::paint):
2010-06-04  Dirk Schulze  <krit@webkit.org>

        Reviewed by Nikolas Zimmermann.

        SVG filter on filter don't work
        https://bugs.webkit.org/show_bug.cgi?id=32708

        Test that a filter can be used by the text root as well as on it's childs.

        * platform/mac/svg/filters/filter-on-filter-for-text-expected.checksum: Added.
        * platform/mac/svg/filters/filter-on-filter-for-text-expected.png: Added.
        * platform/mac/svg/filters/filter-on-filter-for-text-expected.txt: Added.
        * svg/filters/filter-on-filter-for-text.svg: Added.


Canonical link: https://commits.webkit.org/51713@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@60689 268f45cc-cd09-0410-ab3c-d52691b4dbfc