WebCore/rendering/SVGRootInlineBox.cpp
@@ -73,14 +73,13 @@ RenderSVGRoot* findSVGRootObject(RenderObject* start)
 
 // Helper class for paint()
 struct SVGRootInlineBoxPaintWalker {
-    SVGRootInlineBoxPaintWalker(SVGRootInlineBox* rootBox, RenderSVGResourceFilter* rootFilter, RenderObject::PaintInfo paintInfo, int tx, int ty)
+    SVGRootInlineBoxPaintWalker(SVGRootInlineBox* rootBox, RenderObject::PaintInfo paintInfo, int tx, int ty)
         : m_rootBox(rootBox)
         , m_chunkStarted(false)
         , m_paintInfo(paintInfo)
         , m_savedInfo(paintInfo)
         , m_boundingBox(tx + rootBox->x(), ty + rootBox->y(), rootBox->width(), rootBox->height())
         , m_filter(0)
-        , m_rootFilter(rootFilter)
         , m_fillPaintingResource(0)
         , m_strokePaintingResource(0)
         , m_fillPaintingResourceObject(0)
@@ -143,7 +142,7 @@ struct SVGRootInlineBoxPaintWalker {
 
         // FIXME: Why is this done here instead of in RenderSVGText?
         if (!flowBox->isRootInlineBox())
-            SVGRenderBase::prepareToRenderSVGContent(object, m_paintInfo, m_boundingBox, m_filter, m_rootFilter);
+            SVGRenderBase::prepareToRenderSVGContent(object, m_paintInfo, m_boundingBox, m_filter);
     }
 
     void chunkEndCallback(InlineBox* box)
@@ -403,7 +402,6 @@ private:
 
     FloatRect m_boundingBox;
     RenderSVGResourceFilter* m_filter;
-    RenderSVGResourceFilter* m_rootFilter;
 
     RenderSVGResource* m_fillPaintingResource;
     RenderSVGResource* m_strokePaintingResource;
@@ -431,7 +429,7 @@ void SVGRootInlineBox::paint(RenderObject::PaintInfo& paintInfo, int tx, int ty)
     // Initialize text rendering
     if (SVGRenderBase::prepareToRenderSVGContent(renderer(), paintInfo, boundingBox, filter)) {
         // Render text, chunk-by-chunk
-        SVGRootInlineBoxPaintWalker walkerCallback(this, filter, paintInfo, tx, ty);
+        SVGRootInlineBoxPaintWalker walkerCallback(this, paintInfo, tx, ty);
         SVGTextChunkWalker<SVGRootInlineBoxPaintWalker> walker(&walkerCallback,
                                                                &SVGRootInlineBoxPaintWalker::chunkPortionCallback,
                                                                &SVGRootInlineBoxPaintWalker::chunkStartCallback,
